set(COMPONENT "scanner")

set(HAL_SERVO_INTERFACE_DIR "${CMAKE_SOURCE_DIR}/../hal/servo")
set(HAL_LIDAR_INTERFACE_DIR "${CMAKE_SOURCE_DIR}/../hal/lidar")
set(HAL_SLEEPER_INTERFACE_DIR "${CMAKE_SOURCE_DIR}/../hal/sleeper") 

file(GLOB SRCS "*.h" "${HAL_LIDAR_INTERFACE_DIR}/*.h" "${HAL_SERVO_INTERFACE_DIR}/*.h" "${HAL_SLEEPER_INTERFACE_DIR}/*.h" "*.cpp" )

add_library(${COMPONENT} STATIC ${SRCS})
target_include_directories(${COMPONENT} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${PICO_CORE_INC_PATH} ${HAL_LIDAR_INTERFACE_DIR} ${HAL_SERVO_INTERFACE_DIR} ${HAL_SLEEPER_INTERFACE_DIR})

add_subdirectory(test)